# adt-c

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  clist_example.c  dlist_example.c  hashtable_example.c  list_example.c  queue_example.c  stack_example.c
src/: clist.c  clist.h  dlist.c  dlist.h  hashstr.c  hashstr.h  hashtable.c  hashtable.h  list.c  list.h  queue.c  queue.h  stack.c  stack.h
